cluster/apps/default/hoarder/app/meilisearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-meilisearch
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-meilisearch
  template:
    metadata:
      labels:
        app: hoarder-meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.12.7
          volumeMounts:
            - mountPath: /meili_data
              name: meilisearch
      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: hoarder-meilisearch-pvc
