cluster/apps/default/hoarder/app/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-web
  template:
    metadata:
      labels:
        app: hoarder-web
      annotations:
        reloader.stakater.com/reload: "true"
    spec:
      containers:
        - name: web
          image: ghcr.io/hoarder-app/hoarder:0.23.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
            - name: data
              mountPath: /tmp
              subPath: tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hoarder-data-pvc
