cluster/apps/default/hoarder/app/chrome-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hoarder-chrome
  namespace: default
spec:
  selector:
    app: hoarder-chrome
  ports:
    - protocol: TCP
      port: 9222
      targetPort: 9222
  type: ClusterIP
