cluster/apps/default/hoarder/app/meilisearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoarder-meilisearch
  namespace: default
spec:
  selector:
    app: hoarder-meilisearch
  ports:
    - protocol: TCP
      port: 7700
      targetPort: 7700
